--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
 @import './colors.scss';
 
 * {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
@@ -22,12 +22,15 @@ body {
 .success {
   background-color: $success;
 }
+
 .warning {
   background-color: $warning;
 }
+
 .danger {
   background-color: $danger;
 }
+
 .undone {
   background-color: $def-prim-dark;
 }
@@ -43,43 +46,47 @@ header {
     right: 0;
     padding: 10px;
     z-index: 9;
+    color: $def-light;
   }
-  
-  .nav > .nav-header {
+
+  .nav>.nav-header {
     display: inline;
   }
-  
-  .nav > .nav-header > .nav-title {
+
+  .nav>.nav-header>.nav-title {
     display: inline-block;
-    font-size: 22px;
+    font-size: 1.5rem;
     color: #fff;
     padding: 10px 10px 10px 10px;
-    align-items: center;
+
+    a {
+      color: $def-light;
+    }
   }
-  
-  .nav > .nav-btn {
+
+  .nav>.nav-btn {
     display: none;
   }
-  
-  .nav > .nav-links {
+
+  .nav>.nav-links {
     display: inline;
     float: right;
     font-size: 18px;
   }
-  
-  .nav > .nav-links > a {
+
+  .nav>.nav-links>a {
     display: inline-block;
-    padding: 13px 10px 13px 10px;
+    padding: 13px 20px 13px 20px;
     text-decoration: none;
     color: #efefef;
   }
-  
-  .nav > .nav-links > a:hover {
+
+  .nav>.nav-links>a:hover {
     background-color: rgba(0, 0, 0, 0.3);
     transition: 400ms;
   }
-  
-  .nav > #nav-check {
+
+  .nav>#nav-check {
     display: none;
   }
 }
@@ -311,9 +318,11 @@ header {
     #btn-mobile {
       display: block;
     }
-    #menu { 
+
+    #menu {
       display: none;
     }
+
     #nav.active #menu {
       display: flex;
     }
@@ -399,47 +408,83 @@ header {
 
 @media (max-width:600px) {
   header {
-    .nav > .nav-btn {
-      display: inline-block;
+    .nav {
+      display: block;
+      justify-content: center;
+      align-items: center;
+      height: 50px;
+    }
+
+    .nav>.nav-header> {
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      .nav-title {
+        display: grid;
+        justify-content: flex-start;
+        align-items: center;
+
+        a {
+          font-size: 9px;
+          font-weight: bolder;
+        }
+      }
+    }
+
+    .nav>.nav-btn {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
       position: absolute;
       right: 0px;
       top: 0px;
     }
-    .nav > .nav-btn > label {
+
+    .nav>.nav-btn>label {
       display: inline-block;
       width: 50px;
       height: 50px;
       padding: 13px;
+      justify-content: center;
+      align-items: center;
     }
-    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
-      background-color: rgba(0, 0, 0, 0.3);
+
+    .nav>.nav-btn>label:hover,
+    .nav #nav-check:checked~.nav-btn>label {
+      background-color: rgba(8, 8, 8, 0.9);
       transition: 400ms;
     }
-    .nav > .nav-btn > label > span {
+
+    .nav>.nav-btn>label>span {
       display: block;
       width: 25px;
       height: 10px;
       border-top: 2px solid #eee;
     }
-    .nav > .nav-links {
+
+    .nav>.nav-links {
       position: absolute;
       display: block;
       width: 100%;
-      background-color: #333;
+      background-color: rgba(8, 8, 8, 0.9);
       height: 0px;
       transition: all 0.3s ease-in;
       overflow-y: hidden;
       top: 50px;
-      left: 0px;
+      right: 0px;
     }
-    .nav > .nav-links > a {
+
+    .nav>.nav-links>a {
       display: block;
       width: 100%;
     }
-    .nav > #nav-check:not(:checked) ~ .nav-links {
+
+    .nav>#nav-check:not(:checked)~.nav-links {
       height: 0px;
     }
-    .nav > #nav-check:checked ~ .nav-links {
+
+    .nav>#nav-check:checked~.nav-links {
       height: calc(100vh - 50px);
       overflow-y: auto;
     }
