--- a/css/style.css
+++ b/css/style.css
@@ -65,16 +65,19 @@ header .nav > .nav-links {
   display: inline;
   float: right;
   font-size: 18px;
+  border-left: 5px solid transparent;
 }
 header .nav > .nav-links > a {
   display: inline-block;
   padding: 13px 20px 13px 20px;
   text-decoration: none;
   color: #efefef;
+  border-left: 5px solid transparent;
 }
 header .nav > .nav-links > a:hover {
   background-color: rgba(0, 0, 0, 0.3);
   transition: 400ms;
+  border-left: 5px solid #3b3b3b;
 }
 header .nav > #nav-check {
   display: none;
