--- a/sass/style.scss
+++ b/sass/style.scss
@@ -72,6 +72,7 @@ header {
     display: inline;
     float: right;
     font-size: 18px;
+    border-left: 5px solid transparent;
   }
 
   .nav>.nav-links>a {
@@ -79,11 +80,13 @@ header {
     padding: 13px 20px 13px 20px;
     text-decoration: none;
     color: #efefef;
+    border-left: 5px solid transparent;
   }
 
   .nav>.nav-links>a:hover {
     background-color: rgba(0, 0, 0, 0.3);
     transition: 400ms;
+    border-left: 5px solid $def-secn-dark;
   }
 
   .nav>#nav-check {
