--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /*#region COLOR DEFAULT*/
 /*#endregion*/
+/*#region Default Stylizing*/
 * {
   margin: 0;
   padding: 0;
@@ -35,6 +36,8 @@ body {
   background-color: #1a1a1a;
 }
 
+/*#endregion*/
+/*#region Header*/
 header .nav {
   width: 100%;
   background-color: #1a1a1a;
@@ -43,7 +46,7 @@ header .nav {
   left: 0;
   right: 0;
   padding: 10px;
-  z-index: 9;
+  z-index: 100;
   color: #cecece;
 }
 header .nav > .nav-header {
@@ -76,13 +79,14 @@ header .nav > .nav-links > a {
 }
 header .nav > .nav-links > a:hover {
   background-color: rgba(0, 0, 0, 0.3);
-  transition: 400ms;
+  transition: 400ms ease;
   border-left: 5px solid #3b3b3b;
 }
 header .nav > #nav-check {
   display: none;
 }
 
+/*#endregion*/
 /*#region Banner*/
 #banner {
   background: #101010;
@@ -269,6 +273,62 @@ header .nav > #nav-check {
 }
 
 /*#endregion*/
+/*#region My Experiences*/
+#myXp {
+  background: #101010;
+  min-height: 100vh;
+  display: flex;
+}
+#myXp .elements {
+  padding-top: 4em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  color: #cecece;
+  min-height: auto;
+}
+#myXp .elements .xp-title {
+  width: 35%;
+  padding: 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
+}
+#myXp .elements .xp-title h1 {
+  font-size: 3em;
+  font-weight: 200;
+}
+#myXp .elements .xp-title i {
+  font-size: 3em;
+}
+#myXp .elements .xp-lists {
+  display: inline-block;
+  margin-top: 4em;
+  width: 65%;
+}
+#myXp .elements .xp-lists .xp-card {
+  padding: 10px;
+}
+#myXp .elements .xp-lists .xp-card .card-title {
+  display: flex;
+  align-items: center;
+  margin: 1.5em auto;
+  gap: 1em;
+}
+#myXp .elements .xp-lists .xp-card .card-time {
+  display: flex;
+  align-items: center;
+  margin: 2em auto;
+  gap: 1em;
+}
+#myXp .elements .xp-lists .xp-card .card-descr > p {
+  text-align: justify;
+}
+
+/*#endregion*/
 @media (max-width: 768px) {
   header #btn-mobile {
     display: block;
@@ -336,8 +396,20 @@ header .nav > #nav-check {
   #skills .elements > .title > h1 {
     font-size: 45px;
   }
+  #myXp .elements {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+  }
+  #myXp .elements .xp-title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
-@media (max-width: 600px) {
+@media (max-width: 678px) {
   header .nav {
     display: block;
     justify-content: center;
@@ -377,7 +449,7 @@ header .nav > #nav-check {
   header .nav > .nav-btn > label:hover,
 header .nav #nav-check:checked ~ .nav-btn > label {
     background-color: rgba(8, 8, 8, 0.9);
-    transition: 400ms;
+    transition: 400ms ease;
   }
   header .nav > .nav-btn > label > span {
     display: block;
