--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 @import './colors.scss';
 
+/*#region Default Stylizing*/
 * {
   margin: 0;
   padding: 0;
@@ -35,7 +36,9 @@ body {
   background-color: $def-prim-dark;
 }
 
+/*#endregion*/
 
+/*#region Header*/
 header {
   .nav {
     width: 100%;
@@ -45,7 +48,7 @@ header {
     left: 0;
     right: 0;
     padding: 10px;
-    z-index: 9;
+    z-index: 100;
     color: $def-light;
   }
 
@@ -85,7 +88,7 @@ header {
 
   .nav>.nav-links>a:hover {
     background-color: rgba(0, 0, 0, 0.3);
-    transition: 400ms;
+    transition: 400ms ease;
     border-left: 5px solid $def-secn-dark;
   }
 
@@ -93,6 +96,8 @@ header {
     display: none;
   }
 }
+
+/*#endregion*/
 
 /*#region Banner*/
 #banner {
@@ -316,6 +321,75 @@ header {
 
 /*#endregion*/
 
+/*#region My Experiences*/
+#myXp {
+  background: $def-tert-dark;
+  min-height: 100vh;
+  display: flex;
+
+  .elements {
+    padding-top: 4em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    color: $def-light;
+    min-height: auto;
+
+    .xp-title {
+      width: 35%;
+      padding: 2em;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1.5em;
+      
+      h1 {
+        font-size: 3em;
+        font-weight: 200;
+      }
+
+      i {
+        font-size: 3em;
+      }
+    }
+
+    .xp-lists {
+      display: inline-block;
+      margin-top: 4em;
+      width: 65%;
+
+      .xp-card {
+        padding: 10px;
+
+        .card-title {
+          display: flex;
+          align-items: center;
+          margin: 1.5em auto;
+          gap: 1em;
+        }
+
+        .card-time {
+          display: flex;
+          align-items: center;
+          margin: 2em auto;
+          gap: 1em;
+        }
+
+        .card-descr > p {
+          text-align: justify;
+        }
+      }
+    }
+  }
+
+  
+}
+
+/*#endregion*/
+
+
 @media (max-width: 768px) {
   header {
     #btn-mobile {
@@ -407,9 +481,25 @@ header {
       font-size: 45px;
     }
   }
+
+  #myXp {
+    .elements {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      margin-top: 50px;
+
+      .xp-title {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
 }
 
-@media (max-width:600px) {
+@media (max-width:678px) {
   header {
     .nav {
       display: block;
@@ -456,7 +546,7 @@ header {
     .nav>.nav-btn>label:hover,
     .nav #nav-check:checked~.nav-btn>label {
       background-color: rgba(8, 8, 8, 0.9);
-      transition: 400ms;
+      transition: 400ms ease;
     }
 
     .nav>.nav-btn>label>span {
