--- a/css/style.css
+++ b/css/style.css
@@ -329,6 +329,91 @@ header .nav > #nav-check {
 }
 
 /*#endregion*/
+/*#region Projects*/
+#projects {
+  min-height: 100vh;
+  background: #121212;
+  color: #cecece;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding: 5em 2.5em;
+}
+#projects .elements {
+  display: flex;
+  flex-direction: column;
+}
+#projects .elements .title > h1 {
+  padding: auto;
+  font-size: 90px;
+  font-weight: 100;
+}
+#projects .elements .descr > p {
+  padding: auto;
+  font-size: 20px;
+}
+#projects .elements .projCards {
+  padding-top: 5em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+#projects .elements .projCards .card {
+  height: 600px;
+  width: 350px;
+  background: #1a1a1a;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  color: #cecece;
+}
+#projects .elements .projCards .card .card-head > img {
+  height: 30%;
+  height: 245px;
+  width: 100%;
+  padding: 10px;
+  border-radius: 15px;
+}
+#projects .elements .projCards .card .card-body {
+  height: 40%;
+  padding: 15px;
+}
+#projects .elements .projCards .card .card-body h3 {
+  font-size: 35px;
+  text-align: center;
+}
+#projects .elements .projCards .card .card-body p {
+  margin-top: 15px;
+  font-size: 12px;
+  padding: 10px;
+}
+#projects .elements .projCards .card .card-footer {
+  height: 30%;
+  display: flex;
+  justify-content: space-between;
+  padding: 25px;
+  gap: 10px;
+}
+#projects .elements .projCards .card .card-footer a {
+  text-decoration: none;
+  height: 50px;
+  width: 150px;
+  background-color: #000;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 15px;
+  font-size: 12px;
+}
+
+/*#endregion*/
+/*#region Media*/
 @media (max-width: 768px) {
   header #btn-mobile {
     display: block;
@@ -408,6 +493,20 @@ header .nav > #nav-check {
     justify-content: center;
     align-items: center;
   }
+  #projects {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 5em 2.5em;
+  }
+  #projects .elements .title > h1 {
+    font-size: 65px;
+    font-weight: 100;
+    text-align: center;
+  }
+  #projects .elements .descr > p {
+    text-align: center;
+  }
 }
 @media (max-width: 678px) {
   header .nav {
@@ -480,5 +579,6 @@ header .nav #nav-check:checked ~ .nav-btn > label {
     overflow-y: auto;
   }
 }
+/*#endregion*/
 
 /*# sourceMappingURL=style.css.map */
