--- a/sass/style.scss
+++ b/sass/style.scss
@@ -344,7 +344,7 @@ header {
       justify-content: center;
       align-items: center;
       gap: 1.5em;
-      
+
       h1 {
         font-size: 3em;
         font-weight: 200;
@@ -377,19 +377,117 @@ header {
           gap: 1em;
         }
 
-        .card-descr > p {
+        .card-descr>p {
           text-align: justify;
         }
       }
     }
   }
 
-  
+
 }
 
 /*#endregion*/
 
+/*#region Projects*/
+#projects {
+  min-height: 100vh;
+  background: $def-quat-dark;
+  color: $def-light;
 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  margin: auto;
+  padding: 5em 2.5em;
+
+  .elements {
+    display: flex;
+    flex-direction: column;
+
+    .title>h1 {
+      padding: auto;
+      font-size: 90px;
+      font-weight: 100;
+    }
+
+    .descr>p {
+      padding: auto;
+      font-size: 20px;
+    }
+
+    .projCards {
+      padding-top: 5em;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+
+      .card {
+        height: 600px;
+        width: 350px;
+        background: $def-prim-dark;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        color: $def-light;
+
+        .card-head>img {
+          height: 30%;
+          height: 245px;
+          width: 100%;
+          padding: 10px;
+          border-radius: 15px;
+        }
+
+        .card-body {
+          height: 40%;
+          padding: 15px;
+
+          h3 {
+            font-size: 35px;
+            text-align: center;
+          }
+
+          p {
+            margin-top: 15px;
+            font-size: 12px;
+            padding: 10px;
+          }
+        }
+
+        .card-footer {
+          height: 30%;
+          display: flex;
+          justify-content: space-between;
+          padding: 25px;
+          gap: 10px;
+
+          a {
+            text-decoration: none;
+            height: 50px;
+            width: 150px;
+            background-color: #000;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 15px;
+            font-size: 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
+/*#endregion*/
+
+/*#region Media*/
 @media (max-width: 768px) {
   header {
     #btn-mobile {
@@ -497,6 +595,25 @@ header {
       }
     }
   }
+
+  #projects {
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 5em 2.5em;
+
+    .elements {
+      .title>h1 {
+        font-size: 65px;
+        font-weight: 100;
+        text-align: center;
+      }
+
+      .descr>p {
+        text-align: center;
+      }
+    }
+  }
 }
 
 @media (max-width:678px) {
@@ -583,3 +700,5 @@ header {
     }
   }
 }
+
+/*#endregion*/
