--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ header .nav > #nav-check {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 25px;
 }
 #projects .elements .projCards .card {
   height: 600px;
@@ -376,7 +376,7 @@ header .nav > #nav-check {
   height: 30%;
   height: 245px;
   width: 100%;
-  padding: 10px;
+  padding: 20px;
   border-radius: 15px;
 }
 #projects .elements .projCards .card .card-body {
@@ -397,7 +397,7 @@ header .nav > #nav-check {
   display: flex;
   justify-content: space-between;
   padding: 25px;
-  gap: 10px;
+  gap: 20px;
 }
 #projects .elements .projCards .card .card-footer a {
   text-decoration: none;
@@ -410,6 +410,11 @@ header .nav > #nav-check {
   align-items: center;
   border-radius: 15px;
   font-size: 12px;
+}
+#projects .elements .projCards .card .card-footer a:hover {
+  background: #121212;
+  transition: 400ms ease;
+  color: #cecece;
 }
 
 /*#endregion*/
