--- a/sass/style.scss
+++ b/sass/style.scss
@@ -657,10 +657,18 @@ footer {
     .items {
       flex-direction: column;
       align-items: center;
-      text-align: center;
+
+      .content {
+        text-align: center;
+
+        h3 {
+          font-size: 30px;
+        }
+      }
 
       .copyright {
         margin-top: 50px; 
+        text-align: center;
       }
     }
   }
