--- a/sass/style.scss
+++ b/sass/style.scss
@@ -507,18 +507,17 @@ footer {
     padding: 40px;
     width: 100%;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
 
     .content {
       display: flex;
       flex-direction: column;
-      height: 100%;
-      width: 50%;
     }
 
     .copyright {
-      height: 100%;
-      width: 50%;
-      text-align: justify;
+      display: flex;
+      flex-direction: column;
     }
   }
 }
